@@ -5,6 +5,8 @@ Supported Presently
 Changelog for 1.3.20
 * Fixes for es_AR translation, duplicate keys removed (Andres B)
 * Demo templates provide better handling of paragraph breaks in notes (Chris T)
+* Fixed menu anomilies due to menu grants on sub-menus (Chris T)
+* Fixed unable to change order or delete it (Chris T, 3535856)
 
 Changelog for 1.3.19
 * New link for customer/vendor when not a dropdown (Chris T)
@@ -22,7 +24,6 @@ Changelog for 1.3.19
 * Fixed missing grant on partsvendor_entry_id_seq (Chris T, h/t Brian W)
 * Fixed voiding invoice duplicates payment (Chris T h/t John L)
 * Fixed CSV exports not having any data (Chris T h/t Erik H)
-* Fixed menu anomilies due to menu grants on sub-menus (Chris T)
 
 Brian W is Brian Wolf
 Chris T is Chris Travers
